<resources>
  <string name="app_name">Geofence_Tracker</string>
  <string name="google_maps_key" translatable="false">REPLACE_ME_IN_LOCAL_PROPERTIES</string>
  <string name="main_title">Geofence tracking</string>
  <string name="main_subtitle">Create zones, start tracking, and review transitions on the map.</string>
  <string name="main_status_ready">Ready to define an area</string>
  <string name="main_status_needs_location">Location permission is required to start tracking.</string>
  <string name="main_status_tracking">Tracking is enabled and ready to monitor movement.</string>
  <string name="main_card_define">Define areas on map</string>
  <string name="main_card_results">View results</string>
  <string name="main_card_stop">Stop tracking</string>
  <string name="main_login">Log in</string>
  <string name="main_signup">Sign up</string>
  <string name="main_logout">Log out</string>
  <string name="main_admin">Admin panel</string>
  <string name="main_auth_guest">Not signed in</string>
  <string name="main_auth_user">Signed in as %1$s</string>
  <string name="main_auth_admin">Signed in as admin</string>
  <string name="main_auth_hint">Create an account or log in to manage your own geofence data.</string>
  <string name="map_hint_define">Long press to add or remove a 100m area.</string>
  <string name="map_hint_results">Results show the latest session and its transitions.</string>
  <string name="map_cancel">Cancel</string>
  <string name="map_start">Start</string>
  <string name="results_pause">Pause service</string>
  <string name="results_resume">Resume service</string>
  <string name="results_back">Back</string>
  <string name="results_empty">No saved results yet.\nCreate a session and move in or out of the area to see markers here.</string>
  <string name="auth_username">Username</string>
  <string name="auth_password">Password</string>
  <string name="auth_title_login">Log in</string>
  <string name="auth_title_signup">Sign up</string>
  <string name="auth_action_login">Log in</string>
  <string name="auth_action_signup">Sign up</string>
  <string name="auth_action_logout">Log out</string>
  <string name="auth_confirm_password">Confirm password</string>
  <string name="auth_error">Invalid username or password</string>
  <string name="auth_signup_error">Could not create account</string>
  <string name="auth_passwords_mismatch">Passwords do not match</string>
  <string name="auth_switch_to_signup">Don\'t have an account? Sign up</string>
  <string name="auth_switch_to_login">Already have an account? Log in</string>
  <string name="admin_title">Admin panel</string>
  <string name="admin_users">Users</string>
  <string name="admin_add_user">Add user</string>
  <string name="admin_delete_user">Delete user</string>
  <string name="admin_reset_password">Reset password</string>
  <string name="admin_add_pin">Add pin</string>
  <string name="admin_remove_pin">Remove pin</string>
  <string name="admin_username">Target username</string>
  <string name="admin_label">Pin label</string>
  <string name="admin_latitude">Latitude</string>
  <string name="admin_longitude">Longitude</string>
  <string name="admin_radius">Radius meters</string>
</resources>
